# macros

./: .gitignore  EXFORmaker.C  EXFORmaker.c  README.md  a  neutrino_Test.toml  nucleon_Test.toml  nuiscomp_comparison.C  nuiscomp_comparison_nu.C  test
2d_histogram_gen/python_scripts/: 2d_histo_slices_irregular_bin.py  2d_histogram_gen  2d_histogram_slices.py  2d_histogram_slices_but_better.py  2d_histogram_slices_rebin.py  GetScaleFactor.C  GetScaleFactor.cpp
2d_histogram_gen/src/: CMakeLists.txt  (+2 more)
nucleon_survival_excess/src/: CMakeLists.txt  is_alive.cpp  is_alive.h  nucleon_survival_excess.h  nucleon_survival_excess_gen.cpp  ratio_histo.cpp  test.C
python_scripts/: 2d_event_histo.py  2d_multiplicity_energy_slice_comparison.py  2d_multiplicity_energy_slice_comparison_neutrino.py  2d_multiplicity_energy_slice_comparison_neutrino_neutron.py  2d_multiplicity_energy_slice_comparison_neutron.py  2d_multiplicity_energy_slice_comparison_neutronsfromproton.py  Leading_nucleon_dist.py  Survival_nucleon_energy.py  excode.py  helpful_functions.py  histplot.py  incomingKEvslowoutgoingKE.py  initKEoutke_histo_slice_sum.py  leadingchannel_draw.py  multiplicity_2dhist.py  multiplicity_reader.py  muondist.py  nucleon_helpful_functions.py  nucleon_multiplicity.py  nucleon_survival_excess_gen.C  nucleon_survival_excess_gen.py  nucleon_survival_excess_gen_2.py  nvect_reader.cpp  old_nucleon_evt_reader.py  probability_determine.py  reader.py  simple_reweighting.py  single_histo_gen.py  standard_plots_maker.py  survival_histo.py  vcwork_reader.py  weight_calc2.py  weight_calculator.py
